Scrub the conformance tests and readme file.